# SampleGammaCorrection

./: CMakeLists.txt  main.cpp
